--- a/css/estilo.css
+++ b/css/estilo.css
@@ -223,31 +223,31 @@ button:hover {
   .foto1 {
     grid-column: 1 / 7;
     grid-row: 1 / 3;
-    background-image: url('./img/elden.jpg');
+    background-image: url('/img/elden.jpg');
   }
 
   .foto2 {
     grid-column: 7 / 10;
     grid-row: 1 / 2;
-    background-image: url('./img/spider.jpg');
+    background-image: url('/img/spider.jpg');
   }
 
   .foto3 {
     grid-column: 10 / 13;
     grid-row: 1 / 2;
-    background-image: url('./img/fifa.jpg');
+    background-image: url('/img/fifa.jpg');
   }
 
   .foto4 {
     grid-column: 7 / 10;
     grid-row: 2 / 3;
-    background-image: url('./img/god.jpg');
+    background-image: url('/img/god.jpg');
   }
 
   .foto5 {
     grid-column: 10 / 13;
     grid-row: 2 / 3;
-    background-image: url('./img/mw3.jpg');
+    background-image: url('/img/mw3.jpg');
   }
 }
 
@@ -259,23 +259,23 @@ button:hover {
   }
 
   .foto1 {
-    background-image: url('./img/elden.jpg');
+    background-image: url('/img/elden.jpg');
   }
 
   .foto2 {
-    background-image: url('./img/foto-spider.webp');
+    background-image: url('/img/foto-spider.webp');
   }
 
   .foto3 {
-    background-image: url('./img/god.jpg');
+    background-image: url('/img/god.jpg');
   }
 
   .foto4 {
-    background-image: url('./img/mw3.jpg');
+    background-image: url('/img/mw3.jpg');
   }
 
   .foto5 {
-    background-image: url('./img/fifa.jpg');
+    background-image: url('/img/fifa.jpg');
   }
 }
 
@@ -285,3 +285,4 @@ footer {
   color: rgba(255, 255, 255, 0.6);
   font-size: .9rem;
 }
+
