--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,13 +82,13 @@ section h2 {
   margin: 0 auto 2rem;
   border-radius: 12px;
   overflow: hidden;
-  aspect-ratio: 21 / 9; 
+  aspect-ratio: 21 / 9;
 }
 
 .hero-banner img {
   width: 100%;
   height: 100%;
-  object-fit: cover; 
+  object-fit: cover;
   display: block;
 }
 
@@ -96,11 +96,11 @@ section h2 {
 .form-section picture img {
   width: 100%;
   max-width: 900px;
-  height: auto; 
+  height: auto;
   border-radius: 12px;
   display: block;
   margin: 1rem auto;
-  object-fit: contain; 
+  object-fit: contain;
 }
 
 
@@ -134,7 +134,7 @@ section h2 {
 .form-grid {
   display: grid;
   gap: 1rem;
-} 
+}
 
 fieldset {
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -258,11 +258,25 @@ button:hover {
     grid-auto-rows: 160px;
   }
 
-  .foto1 { background-image: url("../img/foto-elden.jpg"); }
-  .foto2 { background-image: url("../img/foto-spider.jpg"); }
-  .foto3 { background-image: url("../img/foto-fifa.jpg"); }
-  .foto4 { background-image: url("../img/foto-god.jpg"); }
-  .foto5 { background-image: url("../img/foto-mw3.jpg"); }
+  .foto1 {
+    background-image: url("../img/foto-elden.jpg");
+  }
+
+  .foto2 {
+    background-image: url("../img/foto-spider.jpg");
+  }
+
+  .foto3 {
+    background-image: url("../img/foto-fifa.jpg");
+  }
+
+  .foto4 {
+    background-image: url("../img/foto-god.jpg");
+  }
+
+  .foto5 {
+    background-image: url("../img/foto-mw3.jpg");
+  }
 }
 
 
@@ -273,5 +287,12 @@ footer {
   font-size: .9rem;
 }
 
+#carrossel-tabela img {
+  max-height: 450px;
+  object-fit: cover;
+}
 
-
+#carrossel-tabela h2 {
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+}
